# parse-trait

./: .editorconfig  Cargo.toml  README.md
src/: lib.rs
tests/: int.rs
